tests/compile-fail/generic_event_unsupported_type.rs
use sml::sml;

sml! {
    Unsupported<T> {
        *Idle + event<(T, T)> = X,
    }
}

fn main() {}
